# GPLVMHaskell

./: .gitignore  ChangeLog.md  GPLVMHaskell.cabal  README.md  package.yaml  stack.yaml  test.pca.nan.txt
app/: Main.hs
src/GPLVM/: Basic.hs  GPExample.hs  GPTest.hs  GaussianProcess.hs  GaussianProcessLV.hs  IVM.hs  LinearSolver.hs  PCA.hs  PPCA.hs  Types.hs  Util.hs
src/GPLVM/TypeSafe/: GPLVM.hs  IVM.hs  PCA.hs  PPCA.hs  Types.hs  Util.hs
src/GaussianFace/: Core.hs
src/Math/: Matrix.hs  TestDimensions.hs  TestDimensionsGP.hs  TestDimensionsPCA.hs
