cabal-version: 1.12
name:           GPLVMHaskell
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/serokell/GPLVMHaskell#readme>
homepage:       https://github.com/serokell/GPLVMHaskell#readme
bug-reports:    https://github.com/serokell/GPLVMHaskell/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/serokell/GPLVMHaskell

library
  exposed-modules:
      GPLVM.GaussianProcess
      GPLVM.GaussianProcessLV
      GPLVM.PCA
      GPLVM.IVM
      GPLVM.Types
      GPLVM.Util
  other-modules:
      Paths_GPLVMHaskell
      Math.Matrix
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , containers
    , lens
    , mtl
    , normaldistribution
    , random
    , repa
    , repa-linear-algebra
    , statistics
    , vector
    , universum
  build-tool-depends:
      autoexporter:autoexporter
  default-language: Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
  default-extensions: NoImplicitPrelude
                      RankNTypes
                      TemplateHaskell
                      TypeFamilies
                      GADTs
                      DataKinds
                      OverloadedStrings
                      ScopedTypeVariables
                      TypeOperators
                      TypeApplications
                      RecordWildCards

executable GPLVMHaskell-exe
  main-is: Main.hs
  other-modules:
      Paths_GPLVMHaskell
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      GPLVMHaskell
    , base >=4.7 && <5
    , universum
  default-language: Haskell2010
  ghc-options:         -Wall
                       -fno-warn-orphans
  default-extensions:   NoImplicitPrelude
                        TemplateHaskell
                        TypeApplications
                        OverloadedStrings
